# Lattice

./: CLAUDE.md  main.py  pyproject.toml
lattice/: a.py  fill_split_manim.py  test.py  visualizacion_3d_termperature.py  world.ipynb  world.py
lattice/cosas/: aa.py  p.py  test.py  visualizacion_3d_termperature.py
tests/: world_test.py
