[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
]



[tool.setuptools.packages.find]
where = ["."]
